--- a/struts-snippets/pom.xml
+++ b/struts-snippets/pom.xml
@@ -1,18 +1,31 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     
     <!-- 
-        1) run
+        1.  Approach1 - all automate
+            a)  "mvn install". This will include unit test and integration test
+            b)  this project only includes integration test 
+            c)  with maven-failsafe-plugin, any java file name with "IT" will be treated as 
+                intergration test (by maven, the phase is integration-test)
+            d)  with jetty-maven-plugin, it will launch a jetty app server before 
+                integration test (by maven, the phase is pre-integration-test), and it will 
+                close up (by maven, the phase is post-integration-test)
+            e)  the integration test report can be found in .\struts-snippets\struts-snippets\target\failsafe-reports
+                
+        2.  Approach2 - launch server and browse manually          
         	a) "mvn jetty:run"                      //with property set
         	b) "mvn jetty:run -Djetty.port=9999"	//runtime with port set 
-        
-        2) access http://localhost:8080
+            c) access http://localhost:8080 
+            
     -->
+    
+        
     
     
     <properties>
-        <jetty.version>9.0.0.v20130308</jetty.version>
+    	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <jetty.version>9.0.0.v20130308</jetty.version>       
     </properties>
-    
+
     
     <modelVersion>4.0.0</modelVersion>
     <groupId>struts-snippets</groupId>
@@ -21,20 +34,34 @@
     <packaging>war</packaging>
     
     <build>
-       <plugins>                              
+		<plugins>                              
             <!-- compile -->                  
             <plugin>                                   
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.0</version>
                 <configuration>
-                    <source>1.3</source>
-                    <target>1.3</target>
+                    <source>1.5</source>	 <!-- strut can run with JDK 1.3, but with JUnit, it's set to run with JDK 1.5 -->
+                    <target>1.5</target>
                 </configuration>
             </plugin>
             
-            
-             <!-- pre-integration-test -->
+                       
+			<!-- integration-test -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.12</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>integration-test</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+
             <plugin>
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
@@ -48,8 +75,7 @@
                        <contextPath>/</contextPath>
                     </webApp>
                 </configuration>
-                
-                <executions>
+				<executions>
                     <execution>
                         <id>start-jetty</id>
                         <phase>pre-integration-test</phase>
@@ -75,48 +101,40 @@
     
 
     <dependencies>
-    
-        <!-- jetty-->
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-server</artifactId>
-            <version>${jetty.version}</version>
-        </dependency>
-        
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-webapp</artifactId>
-            <version>${jetty.version}</version>
-        </dependency>
-        
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-runner</artifactId>
-            <version>${jetty.version}</version>
-        </dependency>
-        
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-util</artifactId>
-            <version>${jetty.version}</version>
-        </dependency>
-        
-        
-                
+           
         <!-- struts -->
         <dependency>
             <groupId>org.apache.struts</groupId>
             <artifactId>struts-core</artifactId>
             <version>1.3.10</version>
         </dependency>
-        
-        
-        <!-- javax -->
+
+		
+ 		<!-- javax -->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
             <version>2.3</version>
         </dependency>
-                        
+
+
+        <!-- junit -->                
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
+        
+        
+        <!-- jsoup -->  
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.6.2</version>
+        </dependency>
+        
+        
     </dependencies>             
 </project>
